--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack",
     "build": "cross-env NODE_ENV=production webpack",
-    "start": "live-server"
+    "start": "serve"
   }
 }
